--- a/app/src/main/res/layout/view_header.xml
+++ b/app/src/main/res/layout/view_header.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/header"
+        android:id="@+id/tv_header"
         tools:text="Sample Header"
         android:textSize="20sp"
         android:textStyle="bold"
