--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -10,8 +10,7 @@
         tools:text="Fox"
         android:textSize="30dp"
         android:gravity="center"
-        android:background="@android:color/black"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textStyle="bold"
         android:padding="10dp"
         android:layout_width="match_parent"
